Trying to add changenotes

--- a/PokerPlanning/Client/Pages/Components/CreateRoomDialog.razor
+++ b/PokerPlanning/Client/Pages/Components/CreateRoomDialog.razor
@@ -28,7 +28,7 @@
 
     private void CreateRoom()
     {
-        Snackbar.Add($"Room {newRoomName} Created", Severity.Success);
+        //Snackbar.Add($"Room {newRoomName} Created", Severity.Success);
         MudDialog.Close(DialogResult.Ok(newRoomName));
     }
 }
