--- a/PokerPlanning/Client/Pages/Index.razor
+++ b/PokerPlanning/Client/Pages/Index.razor
@@ -11,7 +11,7 @@
 
 @if (!IsConnected)
 {
-    <MudGrid>
+    <MudGrid  Class="d-flex justify-center flex-grow-1 gap-4">
         <MudItem xl=4></MudItem>
         <MudItem xl="4">
             <Username @bind-UserName="@userName" @bind-SelectedRole="@role" OnConnectCallBack="Connect" />
@@ -21,7 +21,7 @@
 }
 else
 {
-    <MudGrid>
+    <MudGrid  Class="d-flex justify-center flex-grow-1 gap-4">
         @*<MudItem xl="2"> <RoomsList Rooms=@Rooms OnJoinRoomClick="@HandleJoinRoomClick" CurrentRoom="@GetConnectedRoom()"></RoomsList></MudItem>*@
         <MudItem xl="4">
             <MudText Typo="Typo.h4">Voting</MudText>
