--- a/PokerPlanning/Client/Pages/Components/UserInformation.razor
+++ b/PokerPlanning/Client/Pages/Components/UserInformation.razor
@@ -1,6 +1,6 @@
 ﻿@using System.Text.RegularExpressions
 @using System.ComponentModel.DataAnnotations
-@inject HubService _hubService;
+@inject IHubService _hubService;
 
 <MudGrid Class="pa-2">
     <MudItem xs="12">
@@ -13,9 +13,9 @@
                 }
             </MudSelect>
             <div class="d-flex align-center justify-space-between mt-6">
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!success)" Class="ml-auto" OnClick="@(() => Save())">Save</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!success)" Class="ml-auto" OnClick="@(() => Save())"><MudText>Save</MudText></MudButton>
 
-                <MudButton Variant="Variant.Outlined" Color="Color.Primary" Class="ml-auto" OnClick="@(() => LogOut())">Log out</MudButton>
+                <MudButton Variant="Variant.Outlined" Color="Color.Primary" Class="ml-auto" OnClick="@(() => LogOut())"><MudText>Log out</MudText></MudButton>
             </div>
         </MudForm>
     </MudItem>
