--- a/PokerPlanning/Client/Pages/Index.razor
+++ b/PokerPlanning/Client/Pages/Index.razor
@@ -35,6 +35,9 @@ else
                 <MudItem xs="3">
                     <MudButton Disabled="GetVoteDisable()" Variant="GetVoteColor('?'.ToString())" Color="Color.Primary" Size="Size.Large" OnClick="() => HandleVoting('?'.ToString())"> ? </MudButton>
                 </MudItem>
+                <MudItem xs="3">
+                    <MudButton Disabled="GetVoteDisable()" Variant="GetVoteColor(TBD)" Color="Color.Primary" Size="Size.Large" OnClick="() => HandleVoting(TBD)"> TBD </MudButton>
+                </MudItem>
             </MudGrid>
             <MudGrid>
                 <MudItem xs="9">
@@ -68,6 +71,7 @@ else
     private bool showVotes = false;
     private static Dictionary<string, List<string>> Rooms = new Dictionary<string, List<string>>();
     private User currentUser = new();
+    private string TBD = "TBD";
 
     protected override async Task OnInitializedAsync()
     {
